# laika

./: .dockerignore  .gitignore  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml
docs/: architecture.drawio
laika_pipeline/: __init__.py  api.py  cli.py
laika_pipeline/db/: storage_backend.py  storage_json.py
laika_pipeline/example/: api_examples.py
laika_pipeline/lib/: load_json.py
laika_pipeline/pipeline/: __init__.py  asset.py  asset_type.py  asset_version.py  project.py  status.py
laika_pipeline/test/: api_examples.py  run_demo.py  run_tests.py  test_add_asset.py  test_add_asset_version.py  test_api_scenarios.py  test_clear.py  test_get_asset.py  test_get_asset_version.py  test_get_project.py  test_initialize.py  test_list_asset_versions.py  test_list_assets.py  test_load.py  test_load_assets.py  test_save.py  test_validation_errors.py
laika_pipeline/validation/: asset_validator.py  asset_version_validator.py  operation_result.py
sample_data/: asset_data_02.json
