[project]
name = "laika_pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando Suarez Groen", email = "fernando_suarez_groen@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry.scripts]
run_tests = "laika_pipeline.test.run_tests:main"
run_demo = "laika_pipeline.test.run_demo:main"
run_api_example = "laika_pipeline.example.api_examples:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
